# nuvoton_nuc029kge

./: .gitignore  README.md
nuc029kge_fw/: .cproject  .project  CMakeLists.txt  pyocd.yaml
nuc029kge_fw/src/: main.c  main.h
nuc029kge_fw/src/ap/: ap.c  ap.h
nuc029kge_fw/src/bsp/: NUC029xGE.h  _syscalls.c  bsp.c  bsp.h
nuc029kge_fw/src/bsp/startup/: startup_NUC029xGE.S
nuc029kge_fw/src/common/: def.h
nuc029kge_fw/src/hw/: hw.c  hw.h  hw_def.h
nuc029kge_fw/src/hw/driver/: led.c
nuc029kge_fw/src/lib/NUC029xGE/NuClockConfig/clock/: clock.c  clock.cfg  clock.h  nutool_clkcfg.h
nuc029kge_fw/src/lib/NUC029xGE/StdDriver/src/: acmp.c  adc.c  crc.c  ebi.c  fmc.c  gpio.c  i2c.c  pdma.c  pwm.c  rtc.c  sc.c  scuart.c  spi.c  timer.c  timer_pwm.c  usbd.c  usci_i2c.c  usci_spi.c  usci_uart.c  wdt.c  wwdt.c
